# syscalls-rs

./: Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
examples/: basic_usage.rs  linux_demo.rs  message_box.rs
src/: hash.rs  lib.rs  manager.rs  platform.rs  shared.rs  types.rs
src/allocator/: heap.rs  memory.rs  mod.rs  section.rs
src/generator/: direct.rs  exception.rs  gadget.rs  mod.rs
src/native/: mod.rs
src/parser/: directory.rs  mod.rs  signature.rs  table.rs
tests/: hash.rs  integration.rs
